k8s/aks/webapi-deploy-bg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecoders-webapi
spec:
  replicas: 1
  selector:
    matchLabels:
      name: ecoders-webapi
  template:
    metadata:
      labels:
        name: ecoders-webapi
    spec:
      containers:
      - name: ecoders-webapi
        image: astronik/webservice
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
