k8s/aks/webservice-deployment-bg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecoders-webapi
spec:
  replicas: 1
  selector:
    matchLabels:
      name: ecoders-webapi
  template:
    metadata:
      labels:
        name: ecoders-webapi
    spec:
      containers:
      - name: webapi
        image: ecodershub.azurecr.io/webservice:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
