k8s/aks/webservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecoders-webapi-service
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    name: ecoders-webapi
