k8s/aks/webapi-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ecoders-web-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - ecoders.ca
      secretName: ecoders-web-tls
  rules:
    - host: ecoders.ca
      http:
        paths:
          - path: /
            backend:
              serviceName: ecoders-web-service
              servicePort: 80
